--- a/myconfig/crypto-config.yaml
+++ b/myconfig/crypto-config.yaml
@@ -1,10 +1,12 @@
-OrderOrgs:
+OrdererOrgs:
 
   - Name: Orderer
     Domain: logsystem.com
     Specs:
       - Hostname: orderer
+
 PeerOrgs:
+
   - Name: RaspiOrg
     Domain: raspi.logsystem.com
     EnableNodeOUs: true
